First pass at implementing NativeValue based argument/result conversion.  NativeLong has been backfitted to implement NativeValue as a test case.
git-svn-id: https://jna.dev.java.net/svn/jna/branches/jnalib-v3@151 05a1902d-0e30-0410-9027-c8643ccd90df